# subsmarket-3

./: .env.example  .gitattributes  .gitignore  AGENTS.md  README.md  docker-compose.yml  package.json  render.yaml  start-local.bat  start-local.ps1  vercel.json
backend/: alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20260616_0001_identity_catalog.py  20260616_0002_family_engine.py  20260616_0003_notification_jobs.py  20260617_0004_family_lifecycle.py  20260617_0005_family_service_types.py  20260617_0006_family_audit_log.py  20260618_0007_notification_retries.py  20260618_0008_payment_cancellation.py  20260618_0009_query_indexes.py  20260619_0010_supabase_public_schema_hardening.py  20260619_0011_supabase_explicit_deny_policies.py  20260619_0013_deadline_job_indexes.py  (+18 more)
backend/tests/: conftest.py  test_account_marketplace_api.py  test_bot.py  test_catalog_api.py  test_catalog_service.py  test_database_config.py  test_family_api.py  test_family_service.py  test_http_load_smoke.py  test_idempotency_cleanup.py  test_identity_telegram.py  test_jobs_api.py  test_jobs_health_smoke.py  test_jobs_service.py  test_load_smoke.py  test_marketplace_api.py  test_migration_contracts.py  test_notifications.py  test_observability.py  test_ops_config.py  test_payment_requisite_crypto.py  test_postgres_concurrency.py  test_postgres_jobs.py  test_postgres_schema_security.py  test_production_smoke.py  test_rate_limit.py  test_restore_database_smoke.py  test_sentry_smoke.py  test_system_api.py  test_telegram_production_smoke.py  test_write_load_smoke.py
(+230 files in other folders)
