[project]
name = "subsmarket-backend"
version = "0.1.0"
description = "SubsMarket backend MVP"
requires-python = ">=3.12"
dependencies = [
  "alembic>=1.13.3",
  "cryptography>=43.0.0",
  "fastapi>=0.115.0",
  "httpx>=0.27.2",
  "pydantic-settings>=2.5.2",
  "psycopg[binary]>=3.2.3",
  "redis>=5.2.0",
  "sentry-sdk[fastapi]>=2.17.0",
  "sqlalchemy>=2.0.35",
  "uvicorn[standard]>=0.30.6"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.3",
  "ruff>=0.6.9"
]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["B008"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/subsmarket"]
